log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 02:46:44 AM UTC: 
 tests:  0|6
total_score: 0/70
82fcac8
Wed 29 Mar 2023 02:48:29 AM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:40: error: expected ‘)’ before ‘;’ token
   16 |     if(lista == NULL) exit(EXIT_FAILURE;
      |                           ~            ^
arraylist.c:20:18: error: expected ‘;’ before ‘}’ token
   20 |     return lista;
      |                  ^
      |                  ;
   21 | }
      | ~                 
arraylist.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
   21 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
20bfb86
Wed 29 Mar 2023 02:48:49 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
43a7ba1
Wed 29 Mar 2023 02:50:05 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d87a8c3
Wed 29 Mar 2023 02:50:15 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9e500ab
